--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ section {
   height: 400px;
   width: 400px;
   margin: auto 0;
+  border-radius: 30%;
 }
 
 .section__text {
@@ -365,9 +366,10 @@ article .icon {
 }
 
 .project-img {
-  border-radius: 2rem;
-  width: 90%;
-  height: 90%;
+  width: 300px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 15px;
 }
 
 .project-title {
@@ -378,6 +380,10 @@ article .icon {
 .project-btn {
   color: black;
   border-color: rgb(163, 163, 163);
+}
+
+.section__pic-container{
+  border-radius: 30%;
 }
 
 /* CONTACT */
